# web3Project

./: APPROVE_DAO_USAGE.md  Cargo.toml  DEPLOYMENT_GUIDE.md  DEPLOYMENT_SUMMARY.md  GETTING_STARTED.md  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  SUBSCRIPTION_UPDATE_GUIDE.md  check_balances.js  lib.rs
frontend/: README.md  check_ready.mjs  package-lock.json  package.json  test_real_transaction.mjs  test_subscription.mjs  test_tx.mjs
frontend/frontend/public/: metadata.json
frontend/frontend/src/: App.css  App.tsx  index.css
frontend/frontend/src/components/: Header.tsx  Navigation.tsx
frontend/frontend/src/hooks/: useContract.ts  useOnChainInfo.ts  useSubscription.ts  useWallet.ts
frontend/frontend/src/pages/: About.tsx  Faucet.tsx  Governance.tsx  Home.tsx  Membership.tsx
frontend/frontend/src/types/: index.ts
frontend/frontend/src/utils/: constants.ts  contract.ts
frontend/public/: metadata.json
frontend/src/: App.tsx  index.css
frontend/src/components/: GovernancePanel.tsx  Navigation.tsx  NotificationProvider.tsx  SubscriptionCard.tsx
frontend/src/contracts/: dao.json  erc20.json
frontend/src/hooks/: useContract.ts  useERC20.ts  useSubscription.ts  useWallet.ts
frontend/src/pages/: About.tsx  Faucet.tsx  Governance.tsx  Home.tsx  Membership.tsx
frontend/src/utils/: constants.ts
other_contracts/governance/: Cargo.toml  lib.rs
other_contracts/my_erc20/: Cargo.toml  lib.rs
