[package]
name = "my_ink_contract"
version = "0.1.0"
authors = ["[your_name] <[your_email]>"]
edition = "2021"

[dependencies]
ink = { git = "https://github.com/use-ink/ink", branch = "master", version = "6.0.0-alpha.3", default-features = false, features = ["unstable-hostfn"] }
scale = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive"] }
scale-info = { version = "2.6", default-features = false, features = ["derive"], optional = true }

# Note: We **need** to specify the `ink-as-dependency` feature.
#
# If we don't we will end up with linking errors!
governance = { path = "other_contracts/governance", default-features = false, features = ["ink-as-dependency"] }
hex-literal = "1.0.0"
my_erc20 = { path = "other_contracts/my_erc20", default-features = false, features = ["ink-as-dependency"] }
pallet-revive-uapi = { version = "0.4.0", default-features = false, features = ["unstable-hostfn"] }

[dev-dependencies]
env_logger = { version = "0.11.3" }
hex = { version = "0.4.3" }
ink_e2e = { git = "https://github.com/use-ink/ink", branch = "master", version = "6.0.0-alpha.3" }
serde_json = "1.0.114"

[lib]
path = "lib.rs"

[features]
default = ["std"]
std = [
	"governance/std",
	"ink/std",
	"my_erc20/std",
	"scale-info/std",
	"scale/std",
]
ink-as-dependency = []
e2e-tests = []

[package.metadata.ink-lang]
abi = "ink"

[lints.rust.unexpected_cfgs]
level = "warn"
check-cfg = [
	'cfg(ink_abi, values("ink", "sol", "all"))',
]
