[package]
name = "my_erc20"
version = "6.0.0-alpha"
authors = ["Use Ink <ink@use.ink>"]
edition = "2021"
publish = false

[dependencies]
ink = { git = "https://github.com/use-ink/ink", tag = "v6.0.0-alpha.1" }


[dev-dependencies]
ink_e2e = { git = "https://github.com/use-ink/ink", tag = "v6.0.0-alpha.1" }

[lib]
path = "lib.rs"

[features]
default = ["std"]
std = [
	"ink/std",
]
ink-as-dependency = []
e2e-tests = []
