[package]
name = "my_erc20"
version = "6.0.0-alpha"
authors = ["Use Ink <ink@use.ink>"]
edition = "2021"
publish = false

[dependencies]
ink = { git = "https://github.com/use-ink/ink", branch = "master", version = "6.0.0-alpha.3", default-features = false, features = ["unstable-hostfn"] }
scale = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive"] }
scale-info = { version = "2.6", default-features = false, features = ["derive"], optional = true }

[dev-dependencies]
ink_e2e = { git = "https://github.com/use-ink/ink", branch = "master", version = "6.0.0-alpha.3" }

[lib]
path = "lib.rs"

[features]
default = ["std"]
std = [
	"ink/std",
	"scale-info/std",
	"scale/std",
]
ink-as-dependency = []
e2e-tests = []

[package.metadata.ink-lang]
abi = "ink"

[lints.rust.unexpected_cfgs]
level = "warn"
check-cfg = [
	'cfg(ink_abi, values("ink", "sol", "all"))',
]
